# learn_tech

./: .gitignore  README.md
InterviewProblems/: ML技术栈.txt  常见笔试面试知识点总结(CPP).md  常见笔试面试知识点总结(操作系统) .md  常见笔试面试知识点总结(数据库系统).md  常见笔试面试知识点总结(计算机网络).md  操作系统学习笔记.docx  操作系统常见面试题总结.doc  数据库常见面试题.doc  数据挖掘常见笔试面试题.doc  智力题常见面试题.doc  机器学习常见算法分类汇总.doc  机器学习常见面试题.doc  海量数据处理常见面试题.doc  研发类笔试题目汇总.doc  算法常见面试题.doc  计算机网络的面试常用知识点.doc  面经.md  面试题.docx
learn_clang/: TextQuery.cpp  exercise1-1.c  exercise1-13.c  exercise1-8.c  exercise1-9.c
learn_cmake/: CMakeLists.txt  License.txt  TutorialConfig.h.in  cmake常用变量.txt  cmake常用指令.txt  tutorial.cxx  tutorial.cxx~
learn_cmake/MathFunctions/: CMakeLists.txt  CMakeLists.txt~  MakeTable.cxx  mysqrt.cxx
learn_cmake/cmake_example/: CMakeLists.txt
learn_cmake/step1/: CMakeCache.txt  CMakeLists.txt  Makefile  Tutorial  TutorialConfig.h.in  cmake_install.cmake  tutorial.cxx
learn_cmake/step2/: CMakeLists.txt  TutorialConfig.h.in
learn_cmake/step2/MathFunctions/: CMakeLists.txt  mysqrt.cxx
learn_cmake/step3/: CMakeLists.txt  tutorial.cxx
learn_cmake/step4/: CMakeLists.txt
learn_cmake/step5/MathFunctions/: CMakeLists.txt
learn_cmake/step6/: CMakeLists.txt
learn_cmake/step6/MathFunctions/: mysqrt.cxx
learn_cmake/step7/: CMakeLists.txt  CTestConfig.cmake  TutorialConfig.h.in  tutorial.cxx
learn_cmake/t2/: CMakeLists.txt  COPYRIGHT
learn_cmake/t3/: CMakeLists.txt
learn_cmake/t4/: CMakeLists.txt
learn_cmake/t6/: CMakeLists.txt
learn_csapp/chapter3/: arith.c  arith.s  cmp.c  cmp.s  code.s  decode1.c  decode1.s  exchange.c  exchange.s
learn_go/: array.go  atomic.go  channal.go  channel2.go  channel3.go  channel4.go  channel_close.go  error.go  flagtest  flagtest.go  fmt.go  func.go  func2.go  func3.go  func4.go  goroutine.go  goroutine2.go  hello.go  httpserver.go  interface.go  map.go  memory.go  panic.go  pointer.go  slice.go  socket_client.go  socket_server.go  struct.go  struct2.go  syscall2.go  syscall3.go  syscall4.go  sysyscall.go  timer.go
learn_html/: .hello.html.swp  hello.html  layout.html
learn_ml/: LDA读书笔记.md  贝叶斯估计.md
learn_opencv/: opencv_modifyImage.cpp  opencv_showImage.cpp  opencv_test.cpp
learn_pyqt4/: ReadMe.txt  customWidget_burningWidget.py  demo_tetris_game.py  dialog1.py  dialog_color.py  dialog_file.py  dialog_font.py  drag_drop.py  drag_drop2.py  drawing_brush.py  drawing_color.py  drawing_penStyle.py  drawing_point.py  drawing_text.py  hello.py  icon.py  layout.py  menu.py  signal_slot.py  signal_slot2.py  signal_slot3.py  signal_slot4.py  the_tetris_game.py  tips.py  widget_calendar.py  widget_checkbox.py  widget_combobox.py  widget_progressBar.py  widget_qlineedit.py  widget_qpixmap.py  widget_qsplitter.py  widget_slider.py  widget_togglebutton.py
learn_python/: ProduceConsumerProblem.py  decorator.py  doctest.py  for.py  hello.py  if.py  line.txt  numpy_test.py  opencv_test.py  raising.py  readline.py  simpleMusicPlayer.py  thread1.py  thread2.py  thread3.py  thread4.py  threes.txt  tkinter_window_manager.py
learn_qt/: multiclip.ui
learn_qt/BreakOutGame/: BreakOutGame.pro  ball.cpp  ball.h  breakout.cpp  breakout.h  brick.h  (+5 more)
memos/: Goagent账号汇总.md
myos/: boot_sec.asm  boot_sec2.asm  boot_sec3.asm  peterson.c  print_string.asm
(+150 files in other folders)
